[metadata]
name = EventStream
version = attr: event_stream._version.__version__
author = Christopher Tubbs
author_email = christopherotubbs@gmail.com
description = An application for serving a configurable event busses
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files =
    LICENSE
url = https://github.com/christophertubbs/EventStream
project_urls =
    Source = https://github.com/christophertubbs/EventStream
    Tracker = https://github.com/christophertubbs/EventStream/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    redis
    pydantic
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    build
    
[options.entry_points]
console_scripts =
    eventstream-cli = event_stream.application:main
    